--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "cross-env NODE_ENV=development ./node_modules/.bin/nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -15,6 +15,8 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
-    "mongoose": "^4.11.13"
+    "cross-env": "^5.0.5",
+    "mongoose": "^4.11.13",
+    "nodemon": "^1.12.1"
   }
 }
