--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "jsonp": "^0.2.1",
     "vue": "^2.4.2",
     "vue-infinite-scroll": "^2.0.1",
     "vue-router": "^2.7.0"
